--- a/candidate-matching/index.html
+++ b/candidate-matching/index.html
@@ -6,8 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/css/style.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/ctr-prediction/css/style.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
     <meta name="robots" content="noindex, follow">
 </head>
 
@@ -16,49 +18,18 @@
         <nav id="sidebar">
             <div class="custom-menu">
                 <button type="button" id="sidebarCollapse" class="btn btn-primary">
-<i class="fa fa-bars"></i>
-<span class="sr-only">Toggle Menu</span>
-</button>
+                    <i class="fa fa-bars"></i>
+                    <span class="sr-only">Toggle Menu</span>
+                </button>
             </div>
             <div class="p-4 pt-5">
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
-                <ul class="list-unstyled components mb-5 no-bullet">
-                    <li class="active">
-                        <a href="./">Open-Match-Benchmark</a>
-                    </li>
-                    <li>
-                        <a href="./models.html">Models</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md" , target="_blank">Datasets</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md" , target="_blank">Toolkits</a>
-                    </li>
-                    <li>
-                        <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Benmarking Results</a>
-                        <ul class="collapse list-unstyled" id="LeadBoard">
-                            <li>
-                                <a href="./leaderboard/amazonbooks_x0_001.html">amazonbooks_x0_001</a>
-                            </li>
-                            <li>
-                                <a href="./leaderboard/yelp18_x0_001.html">yelp18_x0_001</a>
-                            </li>
-                            <li>
-                                <a href="./leaderboard/gowalla_x0_001.html">gowalla_x0_001</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/CONTRIBUTING.md" , target="_blank">Call for Contributions</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/issues/new" ,target='_blank'>Feedback</a>
-                    </li>
+                <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
                 </ul>
 
                 <div class='mb-5'>
-                    <button id="fork-btn" class="btn btn-primary" style="background:#a791e2" data-loading-text="Loading..." type="button"> Fork Github Repo
+                    <button id="fork-btn" class="btn btn-primary" style="background:#a791e2"
+                        data-loading-text="Loading..." type="button"> Fork Github Repo
                     </button>
                 </div>
                 <!-- <div class="mb-5">
@@ -69,28 +40,47 @@
 
         <div id="content" class="p-4 p-md-5 pt-5">
             <h2 class="mb-4">Open-Match-Benchmark</h2>
-            <p><strong>Congratulations! You have found BARS, an awesome project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong></p>
-            <p>Recommender systems generally comprise two main phases, matching and ranking. Candidate item matching belongs to the first matching phase that is designed to efficiently retrieve hundreds of item candidates out of the entire item corpus. Collaborative
-                filtering is also one of the most representative methods used for candidate item matching. To drive research in this direction, the BARS project builds an open benchmark for candidate item matching, which consists of:</p>
+            <p><strong>Congratulations! You have found BARS, an awesome project aimed for open
+                    <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong></p>
+            <p>Recommender systems generally comprise two main phases, matching and ranking. Candidate item matching
+                belongs to the first matching phase that is designed to efficiently retrieve hundreds of item candidates
+                out of the entire item corpus. Collaborative
+                filtering is also one of the most representative methods used for candidate item matching. To drive
+                research in this direction, the BARS project builds an open benchmark for candidate item matching, which
+                consists of:</p>
 
             <ul>
-                <li><a href="./models.html">A curated list of models on candidate item matching</a>, which have been tagged into different types of methods, such as CF, GNNs, graph embedding, auto-encoders, two-tower models, etc.</li>
-                <li>A collection of <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md" , target="_blank">public datasets for research on candidate item matching</a>, and unique dataset IDs to track specific data splits
+                <li><a href="./models.html">A curated list of models on candidate item matching</a>, which have been
+                    tagged into different types of methods, such as CF, GNNs, graph embedding, auto-encoders, two-tower
+                    models, etc.</li>
+                <li>A collection of <a
+                        href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md" ,
+                        target="_blank">public datasets for research on candidate item matching</a>, and unique dataset
+                    IDs to track specific data splits
                     for each dataset.</li>
-                <li>A collection of <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md" , target="_blank">open-source toolkits for candidate item matching</a>.</li>
-                <li>Most importantly, the most comprehensive <a href="https://openbenchmark.github.io/candidate-matching/leaderboard/amazonbooks_x0_001.html", target="_blank">benchmarking results on various dataset IDs and settings</a>. For each result, the detailed reproducing step is provided along with the open-source benchmarking code.</li>
+                <li>A collection of <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md" ,
+                        target="_blank">open-source toolkits for candidate item matching</a>.</li>
+                <li>Most importantly, the most comprehensive <a
+                        href="https://openbenchmark.github.io/candidate-matching/leaderboard/amazonbooks_x0_001.html" ,
+                        target="_blank">benchmarking results on various dataset IDs and settings</a>. For each result,
+                    the detailed reproducing step is provided along with the open-source benchmarking code.</li>
             </ul>
 
-            <p>The ultimate goal of BARS is to drive reproducible research in the development of recommender systems.</p>
+            <p>The ultimate goal of BARS is to drive reproducible research in the development of recommender systems.
+            </p>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/ctr-prediction/js/popper.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/ctr-prediction/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/ctr-prediction/js/main.js"></script>
+    <script type="text/javascript" src="./js/nav.js"></script>
     <script type="text/javascript">
-        $(document).ready(function() {
-            $("#fork-btn").click(function() {
+        add_nav(page_name = "Open-Match-Benchmark");
+        $(document).ready(function () {
+            $("#fork-btn").click(function () {
                 location.href = "https://github.com/xue-pai/Open-Match-Benchmark";
             });
         });
