--- a/candidate-matching/leaderboard/gowalla_x0_001.html
+++ b/candidate-matching/leaderboard/gowalla_x0_001.html
@@ -6,8 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/css/style.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/candidate-matching/css/style.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
     <meta name="robots" content="noindex, follow">
 </head>
 
@@ -16,52 +18,15 @@
         <nav id="sidebar">
             <div class="custom-menu">
                 <button type="button" id="sidebarCollapse" class="btn btn-primary">
-<i class="fa fa-bars"></i>
-<span class="sr-only">Toggle Menu</span>
-</button>
+                    <i class="fa fa-bars"></i>
+                    <span class="sr-only">Toggle Menu</span>
+                </button>
             </div>
             <div class="p-4 pt-5">
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
-                <ul class="list-unstyled components mb-5 no-bullet">
-                    <li class="active">
-                        <a href="../">Open-Match-Benchmark</a>
-                    </li>
-                    <li>
-                        <a href="../models.html">Models</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md" , target="_blank">Datasets</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md" , target="_blank">Toolkits</a>
-                    </li>
-                    <li>
-                        <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Benmarking Results</a>
-                        <ul class="collapse list-unstyled" id="LeadBoard">
-                            <li>
-                                <a href="./amazonbooks_x0_001.html">amazonbooks_x0_001</a>
-                            </li>
-                            <li>
-                                <a href="./yelp18_x0_001.html">yelp18_x0_001</a>
-                            </li>
-                            <li>
-                                <a href="./gowalla_x0_001.html">gowalla_x0_001</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/CONTRIBUTING.md" , target="_blank">Call for Contributions</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/issues/new" ,target='_blank'>Feedback</a>
-                    </li>
-                </ul>
+                <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
 
-                <div class='mb-5'>
-                    <button id="fork-btn" class="btn btn-primary" style="background:#a791e2" data-loading-text="Loading..." type="button"> Fork Github Repo
-                    </button>
-                </div>
-                <!-- <div class="mb-5">
+                    <!-- <div class="mb-5">
                     <h3 class="h6">Join Wechat Group</h3>
                 </div> -->
             </div>
@@ -78,9 +43,12 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/candidate-matching/js/popper.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/candidate-matching/js/bootstrap.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/candidate-matching/js/main.js"></script>
 
     <script src="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -94,9 +62,13 @@
         $(document).ready(createTableChart('table1', 'chart1',
             "https://cdn.jsdelivr.net/gh/xue-pai/Open-Match-Benchmark/results/gowalla_x0_001.json"));
     </script>
+
+    <script type="text/javascript" src="../js/nav.js"></script>
+
     <script type="text/javascript">
-        $(document).ready(function() {
-            $("#fork-btn").click(function() {
+        add_nav(page_name = "gowalla_x0_001");
+        $(document).ready(function () {
+            $("#fork-btn").click(function () {
                 location.href = "https://github.com/xue-pai/Open-Match-Benchmark";
             });
         });
